<resources>
    <string name="app_name">Pengaduan Desa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Desa Kedunggede</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_auth">Auth</string>
    <string name="title_activity_login">Sign in</string>
    <string name="log_in">Login</string>
    <string name="username_atau_nip">"Masukkan Username "</string>
    <string name="password">Password</string>
    <string name="pengaduandesa">Pengaduan Desa Tanjung</string>
    <string name="namadesa">Desa Kedunggede</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_chat">Obrolan</string>
    <string name="menu_tambah_laporan">Tambah Laporan</string>
    <string name="menu_komentar">Komentari Laporan</string>
    <string name="menu_datauser">Data User</string>
    <string name="logout">Keluar</string>
    <string name="menu_tambah_user">Tambah User</string>
    <string name="simpan">SIMPAN</string>
</resources>
