<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tdn.laporan_desa.ui.home.HomePage"
        android:label="@string/menu_home"
        tools:layout="@layout/home_page_fragment">

    </fragment>
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.tdn.laporan_desa.ui.chat.Chat"
        android:label="@string/menu_chat"
        tools:layout="@layout/chat_fragment">

    </fragment>

    <fragment
        android:id="@+id/nav_tambah_laporan"
        android:name="com.tdn.laporan_desa.ui.tambahlaporan.TambahLaporan"
        android:label="@string/menu_tambah_laporan"
        tools:layout="@layout/tambah_laporan_fragment" />
    <fragment
        android:id="@+id/nav_tambah_user"
        android:name="com.tdn.laporan_desa.ui.tambahuser.TambahUser"
        android:label="@string/menu_tambah_user"
        tools:layout="@layout/tambah_user_fragment" />

    <fragment
        android:id="@+id/nav_komentar"
        android:name="com.tdn.laporan_desa.ui.komentar.Komentar"
        android:label="@string/menu_komentar"
        tools:layout="@layout/komentar_fragment" />

    <fragment
        android:id="@+id/nav_datauser"
        android:name="com.tdn.laporan_desa.ui.datauser.DataUser"
        android:label="@string/menu_datauser"
        tools:layout="@layout/data_user_fragment" />
</navigation>