<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myapp.login.Login">

    <data>

        <variable
            name="vm"
            type="com.tdn.laporan_desa.auth.LoginViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dp_32">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/dp_16">

                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_64"
                    android:src="@drawable/logo_desa"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in"
                        android:textSize="@dimen/sp_24"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pengaduandesa"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>
            </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_muda_banget"
                android:hint="@string/username_atau_nip"
                android:inputType="text"
                android:padding="@dimen/dp_16"
                android:gravity="top"
                android:textSize="@dimen/sp_14"
                android:singleLine="false"
                android:textColor="@color/black_tua_hehe"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@={vm.username}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_muda_banget"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dp_16"
                android:gravity="top"
                android:textSize="@dimen/sp_14"
                android:singleLine="false"
                android:textColor="@color/black_tua_hehe"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@={vm.password}" />

            <TextView
                android:id="@+id/tv_lupa_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lupa Password?"
                android:layout_marginTop="@dimen/padding_10" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_marginTop="@dimen/dp_16"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_16"
                android:background="@drawable/ripple_primary"
                android:onClick="@{(v)->vm.login(v)}"
                viewVisible="@{!vm.isLoading}" />

            <ProgressBar
                viewVisible="@{vm.isLoading}"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center" />
        </LinearLayout>
    </RelativeLayout>

</layout>